add bed size constants

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,16 @@
 [Settings]
 # Pen positions
-pen_up_z = 5.0       # Z-height when the pen is up
-pen_down_z = 0.0     # Z-height when the pen is down (touching the surface)
+PEN_UP_Z = 5.0       # Z-height when the pen is up
+PEN_DOWN_Z = 0.0     # Z-height when the pen is down (touching the surface)
 
 # Offset settings
-x_offset = 10.0      # X-axis offset of the pen tip from the hot end
-y_offset = 10.0      # Y-axis offset of the pen tip from the hot end
-z_offset = 0.0       # Additional Z-offset if needed
+X_OFFSET = 0.0       # X-axis offset of the pen tip from the hot end
+Y_OFFSET = 0.0       # Y-axis offset of the pen tip from the hot end
+Z_OFFSET = 0.0       # Additional Z-offset if needed
 
 # Movement settings
-feed_rate = 1500     # Movement speed in mm/min
+FEED_RATE = 1500     # Movement speed in mm/min
+
+# Bed dimensions
+BED_WIDTH = 220.0    # Bed width in millimeters
+BED_HEIGHT = 220.0   # Bed height in millimeters
